--- a/wwwroot/css/Stylecss.css
+++ b/wwwroot/css/Stylecss.css
@@ -1,2 +1,86 @@
 ﻿body {
+    background: url(../../../images/bg1.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+
+/*background image positioning end - by nectarine*/
+
+.result {
+    text-align: center;
+    vertical-align: middle;
+}
+
+.navbar a {
+    color: orange;
+}
+
+#exchange-form {
+    width: 500px;
+    height: 340px;
+    box-shadow: 5px 4px 43px #222222;
+    background-color: rgba(128,128,128, 0.8);
+    padding: 30px;
+    border: 2px solid dimgrey;
+    border-radius: 4px;
+    left: 50%;
+    top: 50%;
+    margin-left: -250px; /*half width*/
+    margin-top: -150px; /*half height*/
+    position:fixed;
+    color:orange;
+}
+
+#exchange-form-list {
+    width:500px;
+    box-shadow: 5px 4px 43px #222222;
+    background-color: rgba(128,128,128, 0.9);
+    padding: 30px;
+    border: 2px solid dimgrey;
+    border-radius: 4px;
+    margin-left:-250px;
+    position:absolute;
+    left: 50%;
+}
+
+canvas {
+    width: 100%;
+}
+
+#exchange-form-statistic {
+    width: 900px;
+    box-shadow: 5px 4px 43px #222222;
+    background-color: rgba(128,128,128, 1);
+    padding: 30px;
+    border: 2px solid dimgrey;
+    border-radius: 4px;
+    margin-left: -450px;
+    position: absolute;
+    left: 50%;
+    color:orange;
+}
+
+table{
+    color:orange;
+}
+
+tr{
+    cursor:pointer;
+}
+
+.row{
+    margin:10px 10px 10px 10px;
+}
+
+#header {
+    width: 500px;
+    height: 50px;
+    color: orange;
+    margin: 0 -30px;
+    margin-top: -30px;
+    text-align: center;
+    vertical-align: middle;
 }
