refactor style.css and related views

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div id="exchange-form">
+<div id="exchange-form" class="exchange">
     <div id="header"><h2>Exchange Currency</h2></div>
     <div>
         <!-- Input and Submit elements -->
