--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -4,7 +4,7 @@
     var currencies = ViewData["currencies"] as ICollection<CurrencyExchange.DTO.DailyCurrency>;
 }
 
-<div id="exchange-form-list">
+<div id="exchange-form-list" class="exchange">
     <table class="table table-borderd table-hover">
         <thead>
             <tr>
