--- a/Views/Home/Statistic.cshtml
+++ b/Views/Home/Statistic.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<div id="exchange-form-statistic">
+<div id="exchange-form-statistic" class="exchange">
     <h2>Statistic</h2>
 
     <label>Select Country</label>
